--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,7 +1,24 @@
+body {
+   background-color: blanchedalmond;
+}
 h1{
-    color: Orange;
+    color: rgb(45, 45, 180);
+    height: 200px;
+    width: 400px;
+    background-image: url(https://i.imgur.com/eJJtjhe.jpg);
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px solid black;
+}
+
+.inputs{
+     /* display: block; */
+     margin-left: auto;
+     margin-right: auto;
 }
 
 .colorPurple{
-    color: purple;
+    color: rgb(195, 15, 195);
 }
